@@ -117,11 +117,6 @@ the stack without triggering overflow protection.")
 (declaim (type (member nil t :specified)
                *block-compile-default* *block-compile-argument*))
 
-;; Names seen which are defined to be hairy (i.e. non-EQ comparable)
-;; constants.
-(defvar *hairy-defconstants* '())
-(declaim (type list *hairy-defconstants*))
-
 
 ;;;; miscellaneous utilities
 
